8. Ingress  & external access/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
  - host: myapp.local
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
   
  - host: myapp.local
    http:
      paths: 
       - path: /api
         pathType: Prefix
         backend:
           service:
             name: backend-service
             port: 
              number: 5000
